# syn_bmca

./: .python-version  LICENSE  README.md  missing_data_notebook.ipynb  pyproject.toml  requirements.txt
ID_mapping_Example_from_James/: update_df_indices_for_pathwaytools_smarttables.ipynb
data/: Eflux_for_Syn.ipynb  README.md  build.py  build_axenic.py  calculate_rates.py  process_growth_rates.ipynb  run_FBA_with_flux_constraints.ipynb  set_bounds_with_FVA_for_Syn.ipynb  set_bounds_with_FVA_for_Syn_simplified.ipynb
data/GAPDH-fluxomics/processed_data/: fluxomic_photon_WT_ConP.csv  fluxomic_photon_WT_ConPMFA.csv  fluxomic_photon_WT_NaCl_ConP.csv  fluxomic_photon_WT_NaCl_ConPMFA.csv  fluxomic_photon_cscB_ConP.csv  fluxomic_photon_cscB_ConPMFA.csv  fluxomic_wo_photon_WT_Con.csv  fluxomic_wo_photon_WT_NaCl_Con.csv  fluxomic_wo_photon_cscB_NaCl_Con.csv
data/GAPDH-fluxomics/raw_data/: 1-s2.0-S1096717623001222-mmc1.docx  1-s2.0-S1096717623001222-mmc2.xlsx  1-s2.0-S1096717623001222-mmc3.xlsx  1-s2.0-S1096717623001222-mmc4.xlsx  1-s2.0-S1096717623001222-mmc5.xlsx
data/Se_Oxidative_Stress_data/: Counts_raw.csv  Growth_rates_WT_Ad.xlsx
data/Se_Rt_Coculture_data/: Cells_density_Se_Rt_mixed_culture.xlsx  Sample_names.xlsx
data/Se_Rt_Coculture_data/Metabolomics/: Metaboites_Se_Rt_IDs.xlsx  Metaboites_Se_Rt_IDs_9day.xlsx  Se_Rt_mixed_CC_EMSL_rem_PO4_HCO3_and_zer.csv
data/Se_Rt_Coculture_data/Transcript/: All genes vs model genes in mixed and mBR.pptx  Se_mixedCC_raw.xlsx
data/axenic_experiments/processed_data/: cleaned_metabolomics.tsv  enzymze_activity.csv  metabolomics.csv  v_star_iJB785.csv
data/axenic_experiments/raw_data/: KEGG_to_BIGG_mapper_for_Syn_Rt.json
data/circadian_experiments/processed_data/: circadian_metanetx_id_mapper.json  (+19 more)
data/processed_data/: Eflux_for_Syn.csv  calculated_metabolomic_abundance_rates.csv  cleaned_enzyme.csv  cleaned_enzymze_activity_for_syn_elong_model.csv  cleaned_metabolomic_abundance_rates.csv  cleaned_metabolomics.csv  cleaned_metabolomics_rates_for_reference_selector.xlsx  cleaned_metabolomics_reference_selector.xlsx  cleaned_transcriptomics.csv  cleaned_transcriptomics.tsv  discarded_metabolites.csv  enzyme_activity_OLD.csv  enzymze_activity.csv  metabolites_in_model.csv  metabolomics.csv  prepared_enzyme_activity_data.csv  reduced_enzyme.csv  transcriptomics.csv  v_star.csv  v_star_no_zero.csv
data/raw_data/: cell_density_wt_axenic.xlsx  convert_pavlo_to_bigg.ipynb
models/: iJB785_no_zero_flux.xml  iJB785_no_zero_flux_flipped.xml  syn_elong_flipped_no_zero.json  syn_elong_flipped_no_zero_nocofactors.json  syn_elong_flipped_no_zero_sucrose_optimized.json
notebooks/: Circadian_data_prep.ipynb  Run-Eflux.ipynb  make_postprocess_plots (Copy 1).ipynb  normalized_enzyme_activity_reduced_sucrose_optimized_nocofactors.csv  update_df_indices_for_pathwaytools_smarttables.ipynb
notebooks/notebooks_for_generating_data/: Circadian_data_prep.ipynb  GAPDH_data_prep.ipynb  Oxidative_stress_data_prep.ipynb
src/: bmca_utils.py  eflux2.py  fba_utils.py  fix_model.py  make_postprocess_plots.ipynb  pymc_model.py  run_bmca.py
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/syn_bmca/: Syn_pymcmodel_data.pgz  Untitled.ipynb  __init__.py  eflux2.py  fba_utils.py  fix_model.py  model.pgz  plotting.py  pymc_model.py
tests/: conftest.py  test_bmca_utils.py  test_import.py  test_utils.py
(+22 files in other folders)
